[project]
name = "hgvs-ext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cdot>=0.2.26",
    "hgvs>=1.5.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
]
